--- a/linkedin.html
+++ b/linkedin.html
@@ -12,7 +12,7 @@
 
 	<body>
 		<div class="header" >
-			<h2 align="center" style="color: white;">Linked
+			<h2 align="center" >Linked
 		    <i class="fa fa-linkedin " ></i></h2>
 		</div>
 	    
