--- a/linkedin.html
+++ b/linkedin.html
@@ -22,7 +22,7 @@
 			<input type="text" name="lname" placeholder="Last Name"><br>
 			<input type="text" name="email" placeholder="Email"><br>
 			<input type="password" name="password" placeholder="Password (6 or more characters)"><br><br>
-			<div class="container"><p>By clicking Join now ,you agree to the linkedin <a href="#">User Agreement</a>,<a href="#"> Privacy Policy</a> , and <a href="#">Cookie Policy</a></p>
+			<div class="container"><p>By clicking Join now ,you agree to the linkedin <br/><a href="#">User Agreement</a>,<a href="#"> Privacy Policy</a> , and <a href="#">Cookie Policy</a></p>
 			<button><b>Join now</b></button><br><br></div>
 	    </div>
 	</body>
